<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:background="@color/translucent_red"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:orientation="vertical"
  >
<ImageView
    android:id="@+id/logo"
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content"
    android:src="@drawable/jittrlogo"
    android:layout_marginLeft="10px"
    android:layout_marginRight="10px"
    ></ImageView>
 <TextView
    android:id="@+id/instructions"
    android:text="@string/selectnetwork"
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:layout_below="@+id/logo"
 >
 </TextView>
 <RadioGroup
   android:id="@+id/socialnetworkselection"
   android:layout_width="wrap_content"
   android:layout_height="wrap_content"
   android:layout_below="@id/instructions"
   android:orientation="horizontal"
 >
<RadioButton
    android:text="@string/facebook"
    android:id="@+id/select_facebook" 
    android:layout_width="wrap_content" 
    android:layout_height="fill_parent">
</RadioButton>
<RadioButton 
    android:text="@string/twitter" 
    android:id="@+id/select_twitter"
    android:layout_toRightOf="@+id/select_facebook"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
></RadioButton>
<RadioButton 
    android:text="@string/foursquare"
     android:id="@+id/select_foursquare"
     android:layout_toRightOf="@+id/select_twitter" 
     android:layout_width="wrap_content"
      android:layout_height="fill_parent">
</RadioButton>
</RadioGroup>
<Button 
   android:id="@+id/continue_button" 
   android:enabled="false"
   android:text="@string/continue_string" 
   android:layout_height="wrap_content" 
   android:layout_width="wrap_content"
   android:layout_alignParentBottom="true"
>
 </Button>
 <Button 
   android:id="@+id/cancel" 
   android:text="@string/cancel"
    android:layout_alignParentBottom="true"
   android:layout_height="wrap_content"
   android:layout_width="wrap_content"
   android:layout_toRightOf="@+id/continue_button"
   >
 </Button>
</RelativeLayout>